# text-chisel

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  claude.md  rustfmt.toml
.agents/skills/release/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/text-chisel-review/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: rust.yml
assets/: Info.plist.ext  icon.icns  settings.html
src/: clipboard.rs  config.rs  hotkey.rs  login_item.rs  main.rs  prompts.rs  rewrite.rs  settings_window.rs  tray.rs  ui.rs
