[package]
name = "text-chisel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
once_cell = "1"
arboard = "3.6.1"
dotenvy = "0.15.7"
enigo = "0.6.1"
global-hotkey = "0.7.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = { version = "0.35.0" , default-features = false, features = ["rwh_06"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tray-icon = "0.23.0"
resvg = "0.44"
wry = "0.47"
toml = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
