[package]
name = "text-chisel"
version = "1.2.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
once_cell = "1"
arboard = "3.6.1"
dotenvy = "0.15.7"
enigo = "0.6.1"
global-hotkey = "0.7.0"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tao = { version = "0.35.0" , default-features = false, features = ["rwh_06"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
tray-icon = "0.23.0"
resvg = "0.44"
wry = "0.47"
toml = "0.8"
dirs = "5"
log = "0.4"
env_logger = "0.11"

[package.metadata.bundle]
name = "Text Chisel"
identifier = "com.textchisel.app"
icon = ["assets/icon.icns"]
short_description = "Rewrite selected text using Claude AI"
osx_minimum_system_version = "12.0"
osx_info_plist_exts = ["assets/Info.plist.ext"]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
